<resources>
    <string name="app_name">Control de Riesgos</string>
    <string name="mensaje_bienvenida">Bienvenid@!</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Control de Riesgos</string>
    <string name="menu_amenazas">Amenazas</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tipoactivo">Tipos Activo</string>
    <string name="menu_riesgos">Riesgos</string>
    <string name="menu_vulnerabilidades">Vulnerabilidades</string>
    <string name="menu_activos">Activos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_tiposactivo">Tipos Activo</string>
    <string name="menu_vulnerabilidad">Vulnerabilidad</string>
    <string name="menu_activo">Activos</string>
    <string name="menu_unidadesorganizacionales">Unid. Organizacionales</string>
    <string name="menu_causas">Causas</string>
    <string name="menu_criteriosimpacto">Criterios Impacto</string>
    <string name="menu_criteriosprobabilidad">Criterios Probabilidad</string>
    <string name="menu_criteriosriesgo">Criterios Riesgo</string>
    <string name="menu_registrosimpprob">Registros Imp./Prob.</string>
    <string name="menu_reportesriesgo">Reportes Riesgo</string>
</resources>