<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_amenazas"
            android:icon="@drawable/ic_amenaza"
            android:title="@string/menu_amenazas" />
        <item
            android:id="@+id/nav_unidadesorganizacionles"
            android:icon="@drawable/ic_unidadesorganizacionales"
            android:title="@string/menu_unidadesorganizacionales" />
        <item
            android:id="@+id/nav_vulnerabilidades"
            android:icon="@drawable/ic_vulnerabilidad"
            android:title="@string/menu_vulnerabilidad" />
        <item
            android:id="@+id/nav_tiposactivo"
            android:icon="@drawable/ic_tipoactivo"
            android:title="@string/menu_tiposactivo" />
        <item
            android:id="@+id/nav_activos"
            android:icon="@drawable/ic_activo"
            android:title="@string/menu_activo" />

    </group>
</menu>