<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.usat.controlderiesgos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_amenazas"
        android:name="com.usat.controlderiesgos.ui.amenaza.AmenazaFragment"
        android:label="@string/menu_amenazas"
        tools:layout="@layout/fragment_amenaza" />

    <fragment
        android:id="@+id/nav_tiposactivo"
        android:name="com.usat.controlderiesgos.ui.tipoactivo.TipoActivoFragment"
        android:label="@string/menu_tipoactivo"
        tools:layout="@layout/fragment_tipoactivo" />

    <fragment
        android:id="@+id/nav_vulnerabilidades"
        android:name="com.usat.controlderiesgos.ui.vulnerabilidad.VulnerabilidadFragment"
        android:label="@string/menu_vulnerabilidades"
        tools:layout="@layout/fragment_vulnerabilidad" />
</navigation>